created a deck and card classes

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -13,17 +13,34 @@
     </head>
     <main>
       <div id="board-container">
-        <div id="table-deck">table-deck</div>
-        <div id="pile-deck">pile-deck</div>
-        <div id="Yaniv">yaniv!</div>
-        <div id="playar1" class="player">Player 1</div>
-        <div id="playar2" class="player">Player 2</div>
-        <div id="playar3" class="player">Player 3</div>
-        <div id="playar4" class="player">Player 4</div>
+        <div id="table-container">
+          <div id="table-deck">table-deck</div>
+          <div id="pile-deck">pile-deck</div>
+          <div id="yaniv">yaniv!</div>
+        </div>
+        <div id="player1" class="player">
+          Player 1
+          <div id="player1-deck" class="player-deck">player deck</div>
+        </div>
+        <div id="player2" class="player">
+          Player 2
+          <div id="player2-deck" class="player-deck">player deck</div>
+        </div>
+        <div id="player3" class="player">
+          Player 3
+          <div id="player3-deck" class="player-deck">player deck</div>
+        </div>
+        <div id="player4" class="player">
+          Player 4
+          <div id="player4-deck" class="player-deck">player deck</div>
+        </div>
       </div>
-      <div id="scores-container">scores</div>
-      <div id="settings-container">settings</div>
+      <div id="utils">
+        <div id="scores-container">scores</div>
+        <div id="settings-container">settings</div>
+      </div>
     </main>
     <footer></footer>
+    <script src="./main.js"></script>
   </body>
 </html>
