--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
     <title>Yaniv</title>
   </head>
   <body>
@@ -36,11 +36,16 @@
         </div>
       </div>
       <div id="utils">
-        <div id="scores-container">scores</div>
+        <div id="scores-container">
+          <div>scores</div>
+          <div id="scores"></div>
+        </div>
         <div id="settings-container">settings</div>
       </div>
     </main>
     <footer></footer>
-    <script src="./main.js"></script>
+    <script src="./scripts/suitsAndValues.js"></script>
+    <script src="./scripts/classes.js"></script>
+    <script src="./scripts/main.js"></script>
   </body>
 </html>
