added a selection to number of players

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -40,7 +40,17 @@
           <div>scores</div>
           <div id="scores"></div>
         </div>
-        <div id="settings-container">settings</div>
+        <div id="settings-container">
+          <div id="player-number-container">
+            <span>Number of players</span>
+            <select name="player-number" id="player-number">
+              <option value="2">2</option>
+              <option value="3">3</option>
+              <option value="4">4</option>
+            </select>
+            <input id="start" type="button" value="start" />
+          </div>
+        </div>
       </div>
     </main>
     <footer></footer>
