--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -15,7 +15,7 @@
       <div id="board-container">
         <div id="table-container">
           <div id="table-deck">table-deck</div>
-          <div id="pile-deck">pile-deck</div>
+          <div id="pile-deck"></div>
           <div id="yaniv">yaniv!</div>
         </div>
         <div id="player1" class="player">
