--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -14,9 +14,11 @@
     <main>
       <div id="board-container">
         <div id="table-container">
-          <div id="table-deck">table-deck</div>
+          <div id="table-deck">
+            <img style="height: 150px" src="./images/card-backs/blue.png" />
+          </div>
           <div id="pile-deck"></div>
-          <div id="yaniv">yaniv!</div>
+          <input id="Yaniv" type="button" value="yaniv!" />
         </div>
         <div id="player1" class="player">
           Player 1
