fixed decks of cards locations

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -15,26 +15,26 @@
       <div id="board-container">
         <div id="table-container">
           <div id="table-deck">
-            <img style="height: 150px" src="./images/card-backs/blue.png" />
+            <img id="table-deck-img" src="./images/card-backs/blue.png" />
           </div>
           <div id="pile-deck"></div>
           <input id="Yaniv" type="button" value="yaniv!" />
         </div>
         <div id="player1" class="player">
-          Player 1
-          <div id="player1-deck" class="player-deck">player deck</div>
+          <span id="name1"></span>
+          <div id="player1-deck" class="player-deck"></div>
         </div>
         <div id="player2" class="player">
-          Player 2
-          <div id="player2-deck" class="player-deck">player deck</div>
+          <span id="name2"></span>
+          <div id="player2-deck" class="player-deck"></div>
         </div>
         <div id="player3" class="player">
-          Player 3
-          <div id="player3-deck" class="player-deck">player deck</div>
+          <span id="name3"></span>
+          <div id="player3-deck" class="player-deck"></div>
         </div>
         <div id="player4" class="player">
-          Player 4
-          <div id="player4-deck" class="player-deck">player deck</div>
+          <span id="name4"></span>
+          <div id="player4-deck" class="player-deck"></div>
         </div>
       </div>
       <div id="utils">
