fixed cards positioning

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -18,7 +18,7 @@
             <img id="table-deck-img" src="./images/card-backs/blue.png" />
           </div>
           <div id="pile-deck"></div>
-          <input id="Yaniv" type="button" value="yaniv!" />
+          <input id="yaniv" type="button" value="yaniv!" />
         </div>
         <div id="player1" class="player">
           <span id="name1"></span>
