--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -18,30 +18,22 @@
             <img id="table-deck-img" src="./images/card-backs/blue.png" />
           </div>
           <div id="pile-deck"></div>
-          <input id="yaniv" type="button" value="yaniv!" />
+          <input id="yaniv" type="button" value="Yaniv!" />
         </div>
         <div id="player1" class="player">
           <span id="name1"></span>
-          <div id="player1-deck" class="player-deck"></div>
         </div>
         <div id="player2" class="player">
           <span id="name2"></span>
-          <div id="player2-deck" class="player-deck"></div>
         </div>
         <div id="player3" class="player">
           <span id="name3"></span>
-          <div id="player3-deck" class="player-deck"></div>
         </div>
         <div id="player4" class="player">
           <span id="name4"></span>
-          <div id="player4-deck" class="player-deck"></div>
         </div>
       </div>
       <div id="utils">
-        <div id="scores-container">
-          <div>scores</div>
-          <div id="scores"></div>
-        </div>
         <div id="settings-container">
           <div id="player-number-container">
             <span>Number of players</span>
@@ -52,6 +44,10 @@
             </select>
             <input id="start" type="button" value="start" />
           </div>
+        </div>
+        <div id="scores-container">
+          <div>scores</div>
+          <div id="scores"></div>
         </div>
       </div>
     </main>
