added an event listener
event that listens only to the current player

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -21,16 +21,16 @@
           <input id="yaniv" type="button" value="Yaniv!" />
         </div>
         <div id="player1" class="player">
-          <span id="name1"></span>
+          <span class="player-name" id="name1"></span>
         </div>
         <div id="player2" class="player">
-          <span id="name2"></span>
+          <span class="player-name" id="name2"></span>
         </div>
         <div id="player3" class="player">
-          <span id="name3"></span>
+          <span class="player-name" id="name3"></span>
         </div>
         <div id="player4" class="player">
-          <span id="name4"></span>
+          <span class="player-name" id="name4"></span>
         </div>
       </div>
       <div id="utils">
