--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -45,7 +45,7 @@
             <input id="start" type="button" value="start" />
           </div>
         </div>
-        <div id="starting-player"></div>
+        <div id="current-player"></div>
         <div id="scores-container">
           <div>scores</div>
           <div id="scores"></div>
