--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -45,6 +45,7 @@
             <input id="start" type="button" value="start" />
           </div>
         </div>
+        <input id="finish-turn" type="button" value="finish turn">
         <div id="current-player"></div>
         <div id="scores-container">
           <div>scores</div>
