--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -45,7 +45,8 @@
             <input id="start" type="button" value="start" />
           </div>
         </div>
-        <input id="finish-turn" type="button" value="finish turn">
+        <input id="throw-card" type="button" value="throw cards" />
+        <input id="finish-turn" type="button" value="finish turn" />
         <div id="current-player"></div>
         <div id="scores-container">
           <div>scores</div>
